--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main.MainActivity">
+
+        <activity android:name=".RegAndLogin.LogMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Main.MainActivity">
         </activity>
         <activity
             android:name=".User"
@@ -26,11 +29,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cec.doctor.Main.MainActivity" />
         </activity>
-        <activity android:name=".CreatePage">
-        </activity>
         <activity android:name=".Scribbles.Exams" />
         <activity android:name=".Scribbles.Prescription" />
-        <activity android:name=".Main.ListViewAdapter$ListItemDetail" />
+<!--        <activity android:name=".Main.ListViewAdapter$ListItemDetail" />-->
         <activity android:name=".Gallery.ImageMainActivity" />
         <activity android:name=".Gallery.FullImageActivity" />
 
